# a320-hx-rul

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  work.py
configs/: all_craft_no.yaml  extract_config.yaml  qar_params.yaml  zip_method.yaml
docs/: 23-24热交换器拆换指令记录.xlsx  ~$23-24热交换器拆换指令记录.xlsx
src/data/: data_io.py  feat_eng.py  feat_zip.py  io.py  pipeline.py  plot.py  preprocess.py  preprocessor.py  sampling.py
